# SX3-Calibration

./: Analysis.h  CMakeLists.txt  Calibration.cpp  EnergyCalibration.cpp  Fronttest.cpp  Gainmatch.cpp  PositionCalibration.cpp  SectorCalibration.cpp
Output/: EnCal.root  EnCaloutput.root  gains.root  output.root  output1.root  output2.root  withoutgains2.root
cmake/Modules/: FindROOT.cmake
